--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
                         <h3>
                             Matriculation
                         </h3>
-                        <p>bdsahfiufhadsjfvnfi iuashvkh uhasjekfnchasdgiu iudfdvjghdfiuc  uijahshbvuhbyas uhbhfhjvjbyuaewuf udchjavesdy</p>
+                        <p> Delhi Police Public School, New Delhi<br> Central Board of Secondary Education<br>Percentage Obtained: 87%
+                        </p>
                     </div>
             </div>
         
@@ -69,7 +70,7 @@
                         <h3>
                             Senior Secondary
                         </h3>
-                        <p>bdsahfiufhadsjfvnfi iuashvkh uhasjekfnchasdgiu iudfdvjghdfiuc  uijahshbvuhbyas uhbhfhjvjbyuaewuf udchjavesdy</p>
+                        <p>Delhi Police Public School, New Delhi<br> Central Board of Secondary Education<br>Percentage Obtained: 83%</p>
                     </div>
             </div>
         
@@ -82,7 +83,8 @@
                         <h3>
                             Graduation
                         </h3>
-                        <p>bdsahfiufhadsjfvnfi iuashvkh uhasjekfnchasdgiu iudfdvjghdfiuc  uijahshbvuhbyas uhbhfhjvjbyuaewuf udchjavesdy</p>
+                        <p>Dronacharya Group of Institutions, Greater Noida<br> Affilated to Dr. APJ Abdul Kalam Technical University<br>
+                            CGPA Obtained (till semester 5) : 7.004</p>
                     </div>
             </div>
             <div class="timeline-item">
@@ -93,8 +95,9 @@
                     <div class="timeline-content">
                         <h3>
                             Intern at Cognifyz Technologies
-                        </h3>
-                        <p>bdsahfiufhadsjfvnfi iuashvkh uhasjekfnchasdgiu iudfdvjghdfiuc  uijahshbvuhbyas uhbhfhjvjbyuaewuf udchjavesdy</p>
+                        </h3><br>
+                        <p>As a machine learning intern at Cognifyz Technologies, I built predictive models, 
+                            crafted recommendation systems, conducted restaurant classification, and performed geographical analysis.</p>
                     </div>
             </div>
             <div class="timeline-item">
@@ -105,8 +108,10 @@
                     <div class="timeline-content">
                         <h3>
                             Intern at Prodigy InfoTech
-                        </h3>
-                        <p>bdsahfiufhadsjfvnfi iuashvkh uhasjekfnchasdgiu iudfdvjghdfiuc  uijahshbvuhbyas uhbhfhjvjbyuaewuf udchjavesdy</p>
+                        </h3><br>
+                        <p>Implemented regression and clustering for house price prediction and customer segmentation, 
+                            and developed SVM for image classification, hand gesture recognition, and food item identification 
+                            during Prodigy Infotech internship.</p>
                     </div>
             </div>
         </div>
@@ -117,27 +122,30 @@
         <div class="services-container">
             <div class="service-box">
                 <div class="service-info">
-                    <h4>UI Design</h4>
+                    <h4>Front-end Development</h4>
                     <p>
-                        kjsdhfiunas isdguyn igvkjge uugsdincv iugrdyufcbas gdhubasg iuusdgac iufhuoyaw aysdyuf aiiilua suuhsgf ufaha sdhyu a.
+                        I'm deeply passionate about crafting intuitive and visually striking user interfaces (UI). Additionally, my designs prioritize responsiveness, guaranteeing optimal viewing 
+                        experiences across all devices.
                     </p>
                 </div>
             </div>
 
             <div class="service-box">
                 <div class="service-info">
-                    <h4>Frontend Development</h4>
+                    <h4>Back-end Development</h4>
                     <p>
-                        kjsdhfiunas isdguyn igvkjge uugsdincv iugrdyufcbas gdhubasg iuusdgac iufhuoyaw aysdyuf aiiilua suuhsgf ufaha sdhyu a.
+                        With 3 years in backend development, I expertise in key programming languages and frameworks, 
+                        I ensure your web applications are scalable and robust.
                     </p>
                 </div>
             </div>
 
             <div class="service-box">
                 <div class="service-info">
-                    <h4>Backend Development</h4>
+                    <h4>Data Analyst</h4>
                     <p>
-                        kjsdhfiunas isdguyn igvkjge uugsdincv iugrdyufcbas gdhubasg iuusdgac iufhuoyaw aysdyuf aiiilua suuhsgf ufaha sdhyu a.
+                        As someone deeply passionate about data analysis and predictive modeling, my expertise lies in crafting customized solutions 
+                        that extract actionable insights and predict trends, empowering individuals to make informed decisions and drive organizational success.
                     </p>
                 </div>
             </div>
@@ -146,7 +154,8 @@
                 <div class="service-info">
                     <h4>AI/ML Development</h4>
                     <p>
-                        kjsdhfiunas isdguyn igvkjge uugsdincv iugrdyufcbas gdhubasg iuusdgac iufhuoyaw aysdyuf aiiilua suuhsgf ufaha sdhyu a.
+                        As a seasoned machine learning enthusiast with two years of experience, specializing in predictive analytics, image recognition, and more, 
+                        I craft data-driven solutions tailored to drive innovation and efficiency. 
                     </p>
                 </div>
             </div>
